; ModuleID = '/home/carl/AnghaBench/reactos/base/services/nfsd/extr_nfs41_daemon.c_map_user_to_ids.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/nfsd/extr_nfs41_daemon.c_map_user_to_ids.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UNLEN = common dso_local global i32 0, align 4
@NO_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"GetUserName() failed with %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"map_user_to_ids: mapping user %s\0A\00", align 1
@default_uid = common dso_local global i32 0, align 4
@default_gid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @map_user_to_ids to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @map_user_to_ids(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %11 = load i32, i32* @UNLEN, align 4
  %12 = add nsw i32 %11, 1
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %7, align 8
  %15 = alloca i8, i64 %13, align 16
  store i64 %13, i64* %8, align 8
  %16 = load i32, i32* @UNLEN, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %9, align 4
  %18 = load i32, i32* @NO_ERROR, align 4
  store i32 %18, i32* %10, align 4
  %19 = call i32 @GetUserNameA(i8* %15, i32* %9)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %25, label %21

21:                                               ; preds = %3
  %22 = call i32 (...) @GetLastError()
  store i32 %22, i32* %10, align 4
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @eprintf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %23)
  br label %38

25:                                               ; preds = %3
  %26 = call i32 @dprintf(i32 1, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i8* %15)
  %27 = load i32*, i32** %4, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = load i32*, i32** %6, align 8
  %30 = call i64 @nfs41_idmap_name_to_ids(i32* %27, i8* %15, i32* %28, i32* %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %37

32:                                               ; preds = %25
  %33 = load i32, i32* @default_uid, align 4
  %34 = load i32*, i32** %5, align 8
  store i32 %33, i32* %34, align 4
  %35 = load i32, i32* @default_gid, align 4
  %36 = load i32*, i32** %6, align 8
  store i32 %35, i32* %36, align 4
  br label %37

37:                                               ; preds = %32, %25
  br label %38

38:                                               ; preds = %37, %21
  %39 = load i32, i32* %10, align 4
  %40 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %40)
  ret i32 %39
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @GetUserNameA(i8*, i32*) #2

declare dso_local i32 @GetLastError(...) #2

declare dso_local i32 @eprintf(i8*, i32) #2

declare dso_local i32 @dprintf(i32, i8*, i8*) #2

declare dso_local i64 @nfs41_idmap_name_to_ids(i32*, i8*, i32*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
